src/components/Background/Background.scss
.backgroundImage {
    position: absolute;
    height: 100%;
    max-height: 650px;
    width: 100%;
    z-index: -5;
}

.day {
    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
    animation: fade_in 5s;
}

.cloudy-background, .rain-background {
    background: linear-gradient(to bottom, darkgrey, #ffffff);
}

.sky {
    background: linear-gradient(to bottom, #845EC2, #D65DB1, #FF6F91, #FF9671, #FFC75F, #F9F871);
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    opacity: 1;
    z-index: 10;
    animation: fade_out 5s forwards linear;
}

@keyframes fade_out {
    0% {opacity: 1; z-index: 10;}
    100% {opacity: 0; z-index: -10;}
}

.shelf-cloud-left {
    position: absolute;
    top: 0;
    left: -80px;
    height: 110px;
    width: 80%;
    border-radius: 50%;
    background: linear-gradient(to top, grey, #DCDCDC);

    &:before {
        content: "";
        position: absolute;
        top: -15px;
        left: 0;
        height: 50px;
        width: 50%;
        border-radius: 50%;
        background: linear-gradient(to top, grey, #DCDCDC);
    }

    &:after {
        content: "";
        position: absolute;
        top: 70px;
        left: 255px;
        height: 25px;
        width: 25%;
        border-radius: 50%;
        background: linear-gradient(to top, grey, #DCDCDC);
        z-index: 2;
    }
}

.shelf-cloud-right {
    position: absolute;
    top: 0;
    right: -40px;
    height: 125px;
    width: 80%;
    border-radius: 50%;
    background: linear-gradient(to top, grey, #DCDCDC);
    z-index: -1;

    &:before {
        content: "";
        position: absolute;
        top: -5px;
        right: 26px;
        height: 30px;
        width: 70%;
        border-radius: 50%;
        background: linear-gradient(to top, grey, #DCDCDC);
    }

    &:after {
        content: "";
        position: absolute;
        top: 92px;
        right: 22px;
        height: 35px;
        width: 25%;
        border-radius: 50%;
        background: linear-gradient(to top, grey, #DCDCDC);
    }
}

.night {
    background: linear-gradient(to bottom, #131862, #2e4482, #546bab, #87889c, #bea9de);
    animation: fade_in 2s;
}

.sun, .moon {
    position: absolute;
    left: 25%;
    width: 80px;
    height: 80px;
    border-radius: 50%;
    z-index: -1;
    animation-delay: 5s;
    animation: rise 6s forwards ease-in-out;
}

@keyframes rise {
    0% {top: 100%; opacity: 0;}
    25% {opacity: 0;}
    100% {top: 40%; opacity: 1;}
}

.sun {
    background: yellow;
    box-shadow: 0px 0px 60px 5px yellow;  

    .ray-container {
        position: absolute;
        top: 0px;
        left: 0;
        right: 0;
        bottom: 0;	
        width: 80px;  
        z-index: -1;
        animation: ray_anim 120s linear infinite;

        .ray {
            position: absolute;
            margin-top: 10px;
            margin-left: 15px;
            border-radius: 80% 80% 0 0;
            opacity: 0.2;
            z-index: -1;
            background: linear-gradient(to top, rgba(255, 255, 0, 0) 0%, rgba(255, 255, 0, 0.8) 50%, rgba(255, 255, 0, 0) 100%); 
        }

        .ray1 {    
            height: 170px;
            width: 30px;
            transform: rotate(180deg);
            top: -175px;
            left: 15px;
        }

        .ray2 {
            height: 100px;
            width: 8px;
           transform: rotate(220deg);
            top: -90px;
            left: 75px;
        }

        .ray3 {
            height: 170px;
            width: 50px;
            transform: rotate(250deg);
            top: -80px;
            left: 100px;
        }

        .ray4 {
            height: 120px;
            width: 14px;
            transform: rotate(305deg);
            top: 30px;
            left: 100px;
        }

        .ray5 {
            height: 140px;
            width: 30px;
            transform: rotate(-15deg);
            top: 60px;
            left: 40px;
        }

        .ray6 {
            height: 90px;
            width: 50px;
            transform: rotate(30deg);
            top: 60px;
            left: -40px;
        }

        .ray7 {
            height: 180px;
            width: 10px;
            transform: rotate(70deg);
            top: -35px;
            left: -40px;
        }

        .ray8 {
            height: 120px;
            width: 30px;
            transform: rotate(100deg);
            top: -45px;
            left: -90px;
        }

        .ray9 {
            height: 80px;
            width: 10px;
            transform: rotate(120deg);
            top: -65px;
            left: -60px;
        }
        .ray10 {
            height: 190px;
            width: 23px;
            transform: rotate(150deg);
            top: -185px;
            left: -60px;
        }

        @keyframes ray_anim { 
            from {transform: rotate(0deg); transform: rotate(0deg);}    
            to {transform: rotate(360deg); transform: rotate(360deg);}
        }
    }
}
/* ... */

